fixed homepage image text on mobile

--- a/style.css
+++ b/style.css
@@ -163,7 +163,6 @@ h3{
   left: 0;
   top: 30%;
   width: 100%;
-  height:100px
   text-align: center;
   border:1px;
   background-color:rgba(255,255,255,0.3);
